# bachelor-thesis

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yaml  package.xml  requirements.txt
b2_thesis_fusion/: lowstate_imu_bridge.py
config/: ekf_l2.yaml  ekf_l3.yaml  fastlio2_pgo.yaml  fastlio2_velodyne.yaml
launch/: compare_all.launch.py  fastlio2_velodyne_loop.launch.py  fastlio_offline_mapping.launch.py  kiss_icp_b2.launch.py  l1_baseline.launch.py  l2_ekf_odom_imu.launch.py  l3_ekf_odom_imu_kiss.launch.py  l4_ekf_odom_imu_kiss_amcl.launch.py  play_raw_bag.launch.py  record_bag.launch.py
maps/2d_maps/: 2d_map.pgm  2d_map.yaml
maps/2d_maps/map_bag_3/: map_bag_3.pgm  map_bag_3.yaml
maps/2d_maps/map_bag_4/: map_bag_4.pgm  map_bag_4.yaml
maps/2d_maps/map_bag_6/: map_bag_6.pgm  map_bag_6.yaml
maps/fastlio2_maps/map_bag_3/: map.pcd
maps/fastlio2_maps/map_bag_4/: map.pcd  poses.txt
maps/fastlio2_maps/map_bag_4/patches/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
maps/fastlio2_maps/panza_lab/: map.pcd
rviz/: config_l1.rviz  config_l2.rviz  config_l3.rviz  config_l4.rviz  fastlio_offline_mapping.rviz  fusion_config.rviz  kiss_izolated.rviz  vlp16_view.rviz
separate_trajectories/: l1_traj.tum  l2_traj.tum  l3_traj.tum  l4_traj.tum  mocap_gt.tum
separate_trajectories/bag3_trajectories/: l1_traj.tum  l2_traj.tum  l3_traj.tum  l4_traj.tum  mocap_gt.tum
separate_trajectories/bag4_trajectories/: l1_traj.tum  l2_traj.tum  l3_traj.tum  l4_traj.tum  mocap_gt.tum
src/: mocap_to_tum_node.cpp  path_tracker_node.cpp  pcd_to_2d.cpp  pcd_to_2d.py
