<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>b2_thesis_fusion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="g.chuchir@gmail.com">stringer</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_localization</depend>
  <depend>ament_index_cpp</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend> 


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
